--- a/public/index.html
+++ b/public/index.html
@@ -22,8 +22,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>The Stripes NFT</title>
-    <meta name="description" content="Mint your Stripes NFT" />
+    <title>MegaKurs 1.0</title>
+    <meta name="description" content="if (jestes absolwentem Mega kursu && przeszedles przez droge Samuraja) odbierz swoje NFT z MegaKursu" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
