--- a/public/index.html
+++ b/public/index.html
@@ -22,8 +22,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Mega Kurs Monsters</title>
-    <meta name="description" content="Zbierz sie na odwage i wymintuj Mega Kurs Monsterka!" />
+    <title>Eire Harvest</title>
+    <meta name="description" content="Eire Harvest ecoNFTS" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
